--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,6 @@
-server:
-  port: 0
 spring:
   profiles:
-    default: quartz
+    default: shedlock
   sql:
     init:
       data-locations:
@@ -14,9 +12,9 @@ spring:
       continue-on-error: false
       platform: postgresql
   datasource:
-    url: jdbc:postgresql://localhost:5432/migration_db
-    username: migration_db_user
-    password: migration_db_secret
+    url: jdbc:postgresql://postgres:${DB_OUT_PORT}/${DB_NAME}
+    username: ${DB_USER}
+    password: ${DB_PASSWORD}
     driverClassName: org.postgresql.Driver
   jpa:
     hibernate:
