corePoolSize is dynamic for shedlock implementation

--- a/.env
+++ b/.env
@@ -1,8 +1,12 @@
 APP_OUT_PORT_APP_0=8081
 APP_OUT_PORT_APP_1=8082
 APP_IN_PORT=8080
+APP_IMAGE=korkutkose/quartz-shedlock-migration
+APP_IMAGE_VERSION=0.0.1-SNAPSHOT
+APP_ACTIVE_PROFILE=shedlock#quartz
 
-DB_IMAGE=postgres:latest
+DB_IMAGE=postgres
+DB_IMAGE_VERSION=latest
 DB_PORT=5432
 DB_NAME=migration_db
 DB_USER=migration_db_user
