README.md updated

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ APP_OUT_PORT_APP_1=8082
 APP_IN_PORT=8080
 APP_IMAGE=korkutkose/quartz-shedlock-migration
 APP_IMAGE_VERSION=0.0.1-SNAPSHOT
-APP_ACTIVE_PROFILE=shedlock#quartz
+APP_ACTIVE_PROFILE=shedlock
 
 DB_IMAGE=postgres
 DB_IMAGE_VERSION=latest
